Fixed display issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -556,6 +556,7 @@ footer {
     background-size: 100%;
     background-position: center;
     padding-bottom: 1em;
+    min-height: 65vh;
     h1 {
         margin: 0;
         margin-bottom: .5em;
